--- a/.env.dist
+++ b/.env.dist
@@ -1,10 +1,10 @@
-API_ID=2040
-API_HASH=b18441a1ff607e10a989891a5462e627
+API_ID=29080281
+API_HASH=e2777a773eff50612cf1760be78f2b00
 
 # sqlite/sqlite3 or mongo/mongodb
-DATABASE_TYPE={db_type}
+DATABASE_TYPE=mongodb
 # file name for sqlite3, database name for mongodb
-DATABASE_NAME={db_name}
+DATABASE_NAME=userbot2
 
 # only for mongodb
-DATABASE_URL={db_url}
+DATABASE_URL=mongodb+srv://minhquang24071996:2407@cluster0.eesvpnn.mongodb.net/?retryWrites=true&w=majority
